--- a/Bar Chart.html
+++ b/Bar Chart.html
@@ -3,16 +3,17 @@
     <head> 
         <meta charset="utf-8">
         <title>Bar Chart with D3</title>
+        <link href="https://fonts.googleapis.com/css?family=Lora|Oswald&display=swap" rel="stylesheet">
         <link type='text/css' rel='stylesheet' href="Style.css">
         <script src="https://d3js.org/d3.v5.min.js"></script>
     </head>
     
     <body>
-        <div id='container'>
+        <div id='container' class='align-center'>
             <div id='title'>United States GDP (1947-2015)</div>
             <div id='svgContainer'>
             </div>
-            <div id='info'>Code and Design: <a href='https://github.com/Kyokatarz'> Kyo Tran</a></div>
+            <div id='info'>Code and Design: <a href='https://github.com/Kyokatarz'> @Kyo Tran</a></div>
         </div>
         <script src='App.js'></script>
     </body>
